kubesphere-fls/all-demo/gray.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    servicemesh.kubesphere.io/enabled: 'true'
  labels:
    app: nginx
    app.kubernetes.io/name: demo
    app.kubernetes.io/version: v1
    version: v2
  name: nginx-v2
  namespace: all-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      app.kubernetes.io/name: demo
      app.kubernetes.io/version: v1
      version: v2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'true'
      labels:
        app: nginx
        app.kubernetes.io/name: demo
        app.kubernetes.io/version: v1
        version: v2
    spec:
      containers:
        - image: 'tomcat:alpine'
          imagePullPolicy: IfNotPresent
          name: tomcat
          ports:
            - containerPort: 8080
              name: http-80
              protocol: TCP
          resources:
            limits:
              cpu: '500'
              memory: 512Mi
            requests:
              cpu: 20m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
